<resources>

    <string name="jm_gt_exception_message_get_cpu_total">当前系统不支持获取CPU系统总时间片</string>
    <string name="jm_gt_exception_message_below_api21">当前手机系统版本低于5.0，不能展示hook相关功能的数据</string>

    <!-- 网络请求 -->
    <string name="jm_gt_network_url">原始URL以及DNS解析后的URL:</string>
    <string name="jm_gt_network_request_method">请求方式：%1$s</string>
    <string name="jm_gt_network_request_time">请求时间：%1$s</string>
    <string name="jm_gt_network_request_size">请求数据量：%1$s</string>
    <string name="jm_gt_network_response_size">返回数据量：%1$s</string>
    <string name="jm_gt_network_response_code">返回响应码：%1$s</string>
    <string name="jm_gt_phone_basic_info">手机基本信息面板</string>
    <string name="jm_gt_function_for_activity">Activity列表以及跳转</string>
    <string name="jm_gt_switch_floatview">开关悬浮窗</string>
    <string name="jm_gt_activity_list">Activity列表</string>
    <string name="jm_gt_fuzzy_match">点此模糊搜索，忽略大小写</string>
    <string name="jm_gt_activity_stack">Activity栈(无序)</string>
    <string name="jm_gt_manifest_info">功能清单信息面板</string>
    <string name="jm_gt_main_menu">GT主功能页面</string>
    <string name="jm_gt_four_module">四大组件</string>
    <string name="jm_gt_register_activity">已注册 Activity</string>
    <string name="jm_gt_register_service">已注册 Service</string>
    <string name="jm_gt_register_receiver">已注册 Receiver</string>
    <string name="jm_gt_register_provider">已注册 Provider</string>
    <string name="jm_gt_intent_filter_action">Action</string>
    <string name="jm_gt_intent_filter_data">Data</string>
    <string name="jm_gt_intent_filter_category">Category</string>
    <string name="jm_gt_service_list">Service列表</string>
    <string name="jm_gt_receiver_list">Receiver列表</string>
    <string name="jm_gt_provider_list">Provider列表</string>
    <string name="jm_gt_basic_info">基础信息</string>
    <string name="jm_gt_without_permission">请全部赋予权限，否则部分功能可能无法使用。</string>
    <string name="jm_gt_lowsm_stacktrace">查看卡顿栈日志</string>
    <string name="jm_gt_lowsm_stack">卡顿栈日志</string>
    <string name="jm_gt_pref_info">SharedPreferences信息面板</string>
    <string name="jm_gt_floatview_switch">悬浮窗模块展示开关</string>
    <string name="jm_gt_switch_package">是否显示包名</string>
    <string name="jm_gt_switch_top_activity">是否显示栈顶Activity</string>
    <string name="jm_gt_switch_cpu">是否显示CPU占比</string>
    <string name="jm_gt_switch_memory">是否显示内存占比</string>
    <string name="jm_gt_switch_thread_count">是否显示线程数</string>
    <string name="jm_gt_switch_auto_add">是否显示计数器</string>
    <string name="jm_gt_switch_activity_stack">是否显示Activity栈</string>
    <string name="jm_gt_switch_fps">是否显示FPS</string>
    <string name="jm_gt_switch_flow">是否显示流量</string>
    <string name="jm_gt_switch_api">是否显示API接口</string>
    <string name="jm_gt_network_api">网络接口API列表</string>
    <string name="jm_gt_switch_h5_monitor">是否显示H5监控</string>
    <string name="jm_gt_source_url">原始地址：%1$s</string>
    <string name="jm_gt_dns_url">DNS解析后地址：%1$s</string>
    <string name="jm_gt_request_method">请求方式：%1$s</string>
    <string name="jm_gt_response_code">返回状态：%1$s</string>
    <string name="jm_gt_request_size">请求数据大小：%1$skb</string>
    <string name="jm_gt_response_size">返回数据大小：%1$skb</string>
    <string name="jm_gt_request_time">请求时长：%1$dms</string>
    <string name="jm_gt_modify">修改</string>
    <string name="jm_gt_floatview_mode">悬浮窗模式</string>
    <string name="jm_gt_model_switch">功能模块开关</string>
    <string name="jm_gt_open_simple_mode">是否开启精简模式</string>
    <string name="jm_gt_simple_mode_tip">精简模式默认展示前两项，且只能通过拖拽来开关功能</string>
    <string name="jm_gt_request_header">请求Header\n%1$s</string>
    <string name="jm_gt_request_content">请求内容\n%1$s\n</string>
    <string name="jm_gt_response_header">返回Header\n%1$s</string>
    <string name="jm_gt_response_content">返回内容\n%1$s</string>

    <string name="jm_gt_upload_flow">上行流量：</string>
    <string name="jm_gt_flow_unit">KB</string>
    <string name="jm_gt_download_flow">下行流量：</string>
    <string name="jm_gt_upload_speed">上行网速：</string>
    <string name="jm_gt_speed_unit">KB/s</string>
    <string name="jm_gt_download_speed">下行网速：</string>
    <string name="jm_gt_switch_screen_recorder">是否开启屏幕录制</string>
    <string name="jm_gt_screen_recorder_fail">屏幕录制失败</string>
    <string name="jm_gt_recorder_time">%1$s:%2$s:%3$s</string>

    <string name="jm_gt_floatview_activitystack">Activity 堆栈</string>
    <string name="jm_gt_floatview_package">包名:</string>
    <string name="jm_gt_floatview_auto_add">线程计数：</string>
    <string name="jm_gt_floatview_cpu">CPU:</string>
    <string name="jm_gt_floatview_flow">流量相关</string>
    <string name="jm_gt_floatview_fps">FPS:</string>
    <string name="jm_gt_floatview_bigblock">大卡顿次数：</string>
    <string name="jm_gt_floatview_lowsm">低流畅次数：</string>
    <string name="jm_gt_floatview_islowsm">当前是否低流畅：</string>
    <string name="jm_gt_floatview_memory">内存:</string>
    <string name="jm_gt_floatview_api">API接口</string>
    <string name="jm_gt_floatview_threadcount">线程数</string>
    <string name="jm_gt_floatview_all_thread">总线程数：</string>
    <string name="jm_gt_floatview_gt_thread">GT自身线程数：</string>
    <string name="jm_gt_floatview_topactivity">栈顶 Activity:</string>
    <string name="jm_gt_floatview_screenrecorder">屏幕录制</string>
    <string name="jm_gt_floatview_h5_monitor">H5监控:</string>
    <string name="jm_gt_switch_big_text">是否显示大文本框样式</string>
    <string name="jm_gt_switch_keyvalue">是否显示键值文本样式</string>
    <string name="jm_gt_switch_key_pic">是否显示键图样式</string>
    <string name="jm_gt_switch_pic_value">是否显示图值样式</string>
    <string name="jm_gt_switch_custom">是否显示自定义样式</string>

</resources>
