<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingLeft="15dp"
    android:paddingRight="15dp">

    <TextView
        android:id="@+id/tv_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingTop="13dp"
        android:textColor="#999999"
        android:textSize="13sp" />

    <LinearLayout
        android:id="@+id/ll_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingBottom="16dp"
        android:paddingTop="12dp">

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ellipsize="start"
            android:singleLine="true"
            android:textColor="#333333"
            android:textSize="16sp" />

        <ImageView
            android:id="@+id/iv_arrow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/jm_gt_unfold_arrow" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_detail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="20dp"
        android:paddingTop="20dp"
        android:visibility="gone">

        <TextView
            android:id="@+id/tv_source_url"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/jm_gt_source_url"
            android:textColor="#666666"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/tv_request_method"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/jm_gt_request_method"
            android:textColor="#666666"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/tv_response_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/jm_gt_response_code"
            android:textColor="#666666"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/tv_request_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/jm_gt_request_time"
            android:textColor="#666666"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/tv_request_size"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/jm_gt_request_size"
            android:textColor="#666666"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/tv_response_size"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/jm_gt_response_size"
            android:textColor="#666666"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/tv_request_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/jm_gt_request_header"
            android:textColor="#666666"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/tv_request_content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/jm_gt_request_content"
            android:textColor="#666666"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/tv_response_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/jm_gt_response_header"
            android:textColor="#666666"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/tv_response_content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/jm_gt_response_content"
            android:textColor="#666666"
            android:textSize="14sp" />

    </LinearLayout>

</LinearLayout>