<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/jm_gt_shape_activity_content"
    android:orientation="vertical"
    android:paddingTop="25dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/jm_gt_floatview_mode"
        android:textColor="#333333"
        android:textSize="15sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="15dp">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:singleLine="true"
                android:text="@string/jm_gt_open_simple_mode"
                android:textColor="#333333"
                android:textSize="15sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:ellipsize="end"
                android:singleLine="true"
                android:text="@string/jm_gt_simple_mode_tip"
                android:textColor="#999999"
                android:textSize="12sp" />
        </LinearLayout>

        <CheckBox
            android:id="@+id/cb_mode_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:button="@drawable/jm_gt_selector_switch" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="#DADADA" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center_horizontal"
        android:text="@string/jm_gt_model_switch"
        android:textColor="#333333"
        android:textSize="15sp" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rv_switch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>